agregar nombre de unidad a páginas de lista de revisiones

--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -10,6 +10,7 @@
 
 
     <h2>Historial de revisiones de equipo</h2>
+    <h2>Unidad: {{ ambulancia.nombre }}</h2>
     <a href="{% url "ambulancia:ver_ambulancias" %}">
                 <button class="btn btn-dark" type="button" data-toggle="modal"
                         data-target="#modalCancel"><i
