--- a/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
@@ -5,6 +5,8 @@
 
 
     <h2>Historial de revisiones de estado de la unidad</h2>
+    <h2>Unidad: {{ ambulancia.nombre }}</h2>
+
   <a href="{% url "ambulancia:ver_ambulancias" %}">
                 <button class="btn btn-dark" type="button" data-toggle="modal"
                         data-target="#modalCancel"><i
