corregir errores en reportes, andir revision de estado cuando se crea una ambulancia

--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -165,7 +165,7 @@ Head
                         <li>
                             <a href="{% url 'revision:reportes_materiales' %}">
                                 <i class="mdi mdi-record"></i>
-                                <span> Reportes </span>
+                                <span> Reporte </span>
                             </a>
                         </li>
                     {% endif %}
