--- a/Vostok/revision/templates/revision/reportes.html
+++ b/Vostok/revision/templates/revision/reportes.html
@@ -5,7 +5,7 @@
     <!--######## VIEW US41 ########-->
 
 
-    <h2>Reportes de Inventarios</h2>
+    <h2>Reporte de equipos</h2>
 
     {% if  info %}
         <br>
