cambiar anónimo a desactivado en frontend de lista de usuarios

--- a/Vostok/users/templates/users/ver_usuarios.html
+++ b/Vostok/users/templates/users/ver_usuarios.html
@@ -71,7 +71,7 @@
 
                     <td>
                         {% if usuario.is_anon %}
-                            Anónimo
+                            Desactivado
                             {% elif usuario.is_voluntario %}
                             Voluntario
                             {% elif usuario.is_administrador %}
